--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <br>
         Orust bästa egenskap är att havet finns så nära, min familj bor där och jag har många av mina kompisar där.
         </p>
+        <br>
+        <img src="orust.jpg" alt ="Min Orust bild" width="200">
     <div>
         <p>Jag har inte större erfarenhet alls om utveckling eller programmering. Jag gick en programmeringskurs för att kunna söka denna utbildningen.
         <br>De programspåket jag använde då var c++, kursen gick bra och jag tror jag har lite lättare att förstå visa delar i denna utbildningen utav att jag gått den ganska nyligen.
